# Duet

./: .gitignore  .gitmodules  README.md
Kernel/: .gitignore  CMakeLists.txt
Kernel/include/: lumos_kernel.hpp  pg_redef_macro.hpp  pg_under_macro.hpp
Kernel/include/exec/: executor.hpp  planner.hpp  runtime.hpp  type_mapper.hpp
Kernel/protos/: mqo.proto
Kernel/sql/: install.sql  uninstall.sql
Kernel/src/: lumos_kernel.cpp  pg_entry.cpp
Kernel/src/exec/: executor.cpp  planner.cpp  runtime.cpp  type_mapper.cpp
Proxy/: .gitignore  .gitmodules  CMakeLists.txt  demo.md  parser_op.md  prompts.md
Proxy/include/: common.hpp  db_utils.hpp  parser.hpp  scheduler.hpp
Proxy/protos/: mqo.proto
Proxy/src/: main.cpp  parser.cpp  scheduler.cpp
SQL Traces/: G1 ChatGPT.sql  G1 Claude sonnet 4.5.sql  G1 Gemini Flash.sql  G2 ChatGPT.sql  G2 Claude sonnet 4.5.sql  G2 Gemini Flash.sql  G3 ChatGPT.sql  G3 Claude sonnet 4.5.sql  G3 Gemini Flash.sql  G4 ChatGPT.sql  G4 Claude sonnet 4.5.sql  G4 Gemini Flash.sql  G5 ChatGPT.sql  G5 Claude sonnet 4.5.sql  G5 Gemini Flash.sql  prompts.txt
